pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec__008-tabs.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 158
expression: "replace_system_specific_urls(render_to_string(markdown_file, &ansi_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/008-tabs.md
---
[32m────────────────────[0m
[33mfoo
[0m[33mbar
[0m[32m────────────────────[0m
